k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tpa-site
spec:
  type: LoadBalancer
  selector:
    app: tpa-site
  ports:
    - port: 80
      targetPort: 80
